--- a/index.css
+++ b/index.css
@@ -1,45 +1,82 @@
 body {
     margin: 0;
-    padding: 10px;
+    padding: 5px; 
     font-family: Arial, Helvetica, sans-serif;
     min-width: 400px;
 }
+.headerInfo {
+    background-color: #e53535;
+    margin: 0;
+    padding: 5px;
+    text-align: center;
+    color: white;
+}
 
+#greetingMessage{
+    background-color: #e53535;
+    margin: 0;
+    padding: 0;
+}
 input {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
-    border: 1px solid #5f9341;
+    border: 1px solid #e53535;
     margin-bottom: 4px;
 }
 
 button {
-    background: #5f9341;
+    background: #e53535;
     color: white;
     padding: 10px 20px;
-    border: 1px solid #5f9341;
+    border: 1px solid #e53535;
     font-weight: bold;
+    cursor: pointer;
+    border-radius: 10px;
 }
-
-#delete-btn {
-    background: white;
-    color: #5f9341;
+#new-messageBtn{
+    background: #e53535;
+    color: white;
+    padding: 10px 20px;
+    border: 1px solid #e53535;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 10px;
+    border-radius: 10px;
 }
-
-ul {
+#completeBtn{
+    background: #e53535;
+    color: white;
+    padding: 6px;
+    border: 1px solid #e53535;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 10px;
+    margin-left: 10px;
+    border-radius: 10px;
+}
+#reminder-list {
     margin-top: 20px;
     list-style: none;
     padding-left: 0;
 }
-
 li {
     margin-top: 5px;
+    font-size: 15px;
+    gap: 10px;
+    margin-top: 5px;
+
 }
 
-a {
-    color: #5f9341;
-}
 #timer {
     display: none;
+}
+.image-container{
+    display:inline-block;
+    position:relative;}
+.deleteImg-btn {
+    position:absolute;
+    left:90%;
+    bottom:55%;
 }
 
